--- a/index.html
+++ b/index.html
@@ -679,7 +679,7 @@
                 <div class="testimonial-author">
                     <div class="author-avatar"></div>
                     <div>
-                        <div class="author-name">Sarah Johnson</div>
+                        <div class="author-name">Heman Parekh</div>
                         <div class="author-title">CTO, TechFlow</div>
                     </div>
                 </div>
