--- a/index.html
+++ b/index.html
@@ -773,7 +773,7 @@
                 <form>
                     <div class="form-group">
                         <label>Full Name</label>
-                        <input type="text" placeholder="Pracchi Goyal" required>
+                        <input type="text" placeholder="Your Name" required>
                     </div>
                     <div class="form-group">
                         <label>Email Address</label>
